[gd_scene load_steps=18 format=2]

[ext_resource path="res://DialogSystem/Dialogue.tres" type="DynamicFont" id=1]
[ext_resource path="res://DialogSystem/Label_base.gd" type="Script" id=2]
[ext_resource path="res://DialogSystem/PixelArial11.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://DialogSystem/bbcodetags/>.gd" type="Script" id=5]
[ext_resource path="res://DialogSystem/bbcodetags/*.gd" type="Script" id=6]
[ext_resource path="res://DialogSystem/bbcodetags/<.gd" type="Script" id=7]
[ext_resource path="res://DialogSystem/Normal.tres" type="StyleBox" id=8]
[ext_resource path="res://DialogSystem/bbcodetags/f.gd" type="Script" id=9]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0.129412, 0.345098, 0.0117647, 1 )
extra_spacing_top = 2
extra_spacing_char = 1
font_data = ExtResource( 3 )

[sub_resource type="RichTextEffect" id=3]
script = ExtResource( 5 )

[sub_resource type="RichTextEffect" id=4]
script = ExtResource( 6 )

[sub_resource type="RichTextEffect" id=5]
script = ExtResource( 7 )

[sub_resource type="RichTextEffect" id=6]
script = ExtResource( 9 )

[sub_resource type="RichTextEffect" id=7]
script = ExtResource( 5 )

[sub_resource type="RichTextEffect" id=8]
script = ExtResource( 6 )

[sub_resource type="RichTextEffect" id=9]
script = ExtResource( 7 )

[node name="DialogueBase" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -380.0
margin_top = -123.0
margin_right = 380.0
margin_bottom = -25.0
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
fit_content_height = true
scroll_active = false
custom_effects = [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="RichTextLabel" parent="Panel/Label"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
custom_styles/normal = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.00784314, 0, 0.0588235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
fit_content_height = true
scroll_active = false
custom_effects = [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 6 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Panel"]
process_mode = 0
wait_time = 0.03

[connection signal="visibility_changed" from="Panel" to="Panel/Label" method="_on_Panel_visibility_changed"]
[connection signal="timeout" from="Panel/Timer" to="Panel/Label" method="_on_Timer_timeout"]
